# lcrt

./: Cargo.toml  README.md  justfile
lcrt/: Cargo.toml
lcrt-macro/: Cargo.toml
lcrt-macro/src/: common.rs  lib.rs  solution.rs  test_utils.rs
lcrt-macro/test_data/: solution_macro_can_generate_prelude_from_attr-expected.txt
lcrt/src/: guess_master.rs  lib.rs  list.rs  nested_integer.rs  point.rs  tree.rs  vec.rs
