[package]
name = "lcrt-macro"
version = "0.1.0"
edition = "2021"
authors = ["r12f <r12f.code@gmail.com>"]
description = "A simple utility crate to help writing leetcode solutions in rust."
readme = "../README.md"
license = "Apache-2.0"
keywords = ["leetcode", "utility"]
categories = ["api-bindings"]
repository = "https://github.com/r12f/lcrt"
exclude = [
    "test_data/*"
]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.50"
darling = "0.14.3"
thiserror = "1.0.38"

[dev-dependencies]
pretty_assertions = "1.3.0"
prettyplease = "0.1.23"