[package]
name = "lcrt"
version = "0.1.0"
edition = "2021"
authors = ["r12f <r12f.code@gmail.com>"]
description = "A simple utility crate to help writing leetcode solutions in rust."
license = "Apache-2.0"
keywords = ["leetcode", "utility"]
categories = ["api-bindings"]
repository = "https://github.com/r12f/lcrt"
exclude = [
    "test_data/*"
]

[dependencies]
