[package]
name = "lcrt"
version = "0.1.2"
edition = "2021"
authors = ["r12f <r12f.code@gmail.com>"]
description = "A simple utility crate to help writing leetcode solutions in rust."
license = "Apache-2.0"
keywords = ["leetcode", "utility"]
categories = ["api-bindings"]
repository = "https://github.com/r12f/lcrt"
exclude = [
    "test_data/*"
]

[lib]
doctest = false

[dependencies]
cool_asserts = { version = "2.0.3", optional = true }
pretty_assertions = { version = "1.3.0", optional = true }

[dev-dependencies]
lcrt = { path = ".", features = ["testing"] }

[features]
default = []
all = ["testing"]
testing = ["dep:cool_asserts", "dep:pretty_assertions"]